# week_2

./: README.md  learn_1.py  learn_2_methods.py  pyproject.toml
learning_1/: .gitignore  learn_2_methods.py
task_project/: .dockerignore  Dockerfile  README.md  docker-compose.yml  index.html  main.py  pyproject.toml
task_project/routers/: task_router.py
task_project/schemas/: task_schema.py
task_project/services/: task_service.py
